# Klauzule-zakazane

./: .codacy.yml  .env.production.example  .env.production.frontend.example  .gitignore  .pre-commit-config.yaml  1  CLAUDE.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_BASE.md  MAINTENANCE_SCHEDULE.md  MONITORING.md  MONITORING_IMPLEMENTATION.md  NEXT_SESSION_PLAN.md  PHASE_0_SETUP.md  PHASE_1_PROGRESS.md  PROJECT_STATUS.md  Prompt.odt  QUICK_REFERENCE.md  README.md  RUNBOOK.md  START_HERE.md  docker-compose.dev.yml  docker-compose.prod.yml  install-dependencies.ps1  install-dependencies.sh  start-app.ps1  start-app.sh  start-app.sh.backup  verify_api.py
.pids/: backend.pid  celery.pid  frontend.pid
.serena/: project.yml
backend/: .dockerignore  .env.example  .flake8  Dockerfile  QUICKSTART_UV.md  README.md  alembic.ini  celery_app.py  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/api/: admin.py  analysis.py  auth.py  deps.py  documents.py  health.py  jobs.py
backend/database/: connection.py  import_clauses.py  init_db.sql  seed_clauses.py
backend/middleware/: __init__.py  tracking.py
backend/migrations/: README  env.py
backend/migrations/versions/: 20251209_1327_add_document_tables.py  20251209_1334_add_clause_and_analysis_tables.py  20251217_1156_add_feedback_and_metrics_tables_for_.py  20251217_1800_add_users_table.py
backend/models/: __init__.py  analysis.py  clause.py  document.py  feedback.py  user.py
backend/monitoring/: __init__.py  metrics.py
backend/schemas/: __init__.py  analysis.py  document.py
backend/services/: analysis.py  ocr.py  parser.py  storage.py
backend/tasks/: document_processing.py  sync.py
backend/tests/: __init__.py  conftest.py  test_admin.py  test_auth.py  test_documents.py
docs/: CODACY_SETUP.md  DEPLOYMENT_SUMMARY.md  MAINTENANCE_SCHEDULE.md  QUICK_REFERENCE.md  README.md  README_en.md  README_pl.md  RUNBOOK.md  cloud_cost_analysis.md  deployment_infrastructure.md  implementation_plan.md  implementation_plan_v2.md  scaling_strategy.md  testing_strategy.md
frontend/: .env.example  .eslintrc.json  .lintstagedrc.js  .prettierignore  Dockerfile  next.config.js  package-lock.json  package.json  sentry.client.config.js  sentry.edge.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts
monitoring/: alerts.yml  prometheus.yml
(+77 files in other folders)
